# throttlestop

./: README.md  pyproject.toml  setup.py  undervolt.py
throttlestop/: __init__.py  __main__.py  install.py  msr.py  throttlestop.py  tools.py
