[tool.poetry]
name = "throttlestop"
version = "0.0.5"
description = "Simple tool to manage throttling problems on Linux"
authors = ["Angus Hollands <goosey15@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6||^3.7||^3.8"
plumbum = "^1.6"
numpy = "^1.16"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
throttlestop = 'throttlestop.__main__:main'
throttlestop-install-service = 'throttlestop.install:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
