[project]
name = "throttlestop"
version = "0.0.6"
description = "Simple tool to manage throttling problems on Linux"
authors = [{name = "Angus Hollands <goosey15@gmail.com>" }]
license = "MIT"
python_version = ">=3.10"
dependencies = [
"plumbum>=1.6",
"numpy>=1.16"
]


[project.scripts]
throttlestop = 'throttlestop.__main__:main'
throttlestop-install-service = 'throttlestop.install:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
